<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cardFront"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/frontImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/card_front" />

        <TextView
            android:id="@+id/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="55dp"
            android:text="🟡"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/cardInfo"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/colorText"
            android:text="Name 3 Video Games with Monkeys"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playerTag"
        android:textAlignment="textEnd"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/currentText"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/avatarTextView"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:text="🦖"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/avatarTextView"
            android:text="PLAYER NAME FILLER"
            android:textSize="15sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/currentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Turn"
        android:textSize="25sp"
        android:layout_below="@id/cardFront"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/topBidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Top Bid"
        android:textSize="25sp"
        android:layout_below="@id/playerTag"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bidderTag"
        android:textAlignment="textEnd"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/topBidText"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/bidderAvatarTextView"
            android:layout_width="50dip"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:text="🦖"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/bidderNameTextView"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/bidderAvatarTextView"
            android:text="PLAYER NAME FILLER"
            android:textSize="15sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bidGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bidderTag"
        android:layout_centerVertical="true"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/bidText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="Your Bid: XXXX"
            android:textSize="25sp" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/minus"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/plus"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/submitGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:paddingTop="50dp"
        android:paddingBottom="50dp">

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_toRightOf="@id/passButton"
            android:text="@string/submit"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/passButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/pass"
            android:backgroundTint="@color/red"
            android:textColor="@color/white"/>

    </RelativeLayout>



</RelativeLayout>